objects/Account_Business_Unit_L2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>holds the iBC values and the corresponding BU/L2 values</description>
    <fields>
        <fullName>Business_Unit_Level_2__c</fullName>
        <description>The corresponding BU L2</description>
        <label>Business Unit Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The business unit based on IBC code</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBC__c</fullName>
        <description>The IBC code of the account</description>
        <label>IBC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Business Unit /L2</label>
</CustomObject>